5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1716_2508.log
== TEST (2019-05-16 13:35:04) 
-- CODE:
from math import*

x= int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < x):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:35:10) 
-- CODE:
from math import*

x= int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < x):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:35:31) 
-- CODE:
from math import*

x= int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < x):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:36:27) 
-- CODE:
x = int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < x):
	valor = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:36:34) 
-- CODE:
x = int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < x):
	valor = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- EXECUTION TIME:
0.271163
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.18181818
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:36:36) 
-- CODE:
x = int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < x):
	valor = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:37:31) 
-- CODE:
valor = int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < x):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (cont < x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:38:41) 
-- CODE:
valor = int(input("Numeros de termos: "))

cont = 1
apx = 3
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
while (cont < x):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- ERROR:
File "XXXX", line 5
    x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:39:24) 
-- CODE:
valor = int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < valor):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:39:35) 
-- CODE:
valor = int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < valor):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- EXECUTION TIME:
0.254579
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:42:01) 
-- CODE:
from math import*

x= int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < x):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- EXECUTION TIME:
402.944
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:45:55) 
-- CODE:
valor = int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < valor):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 13:45:57) 
-- CODE:
valor = int(input("Numeros de termos: "))

cont = 1
apx = 3

while (cont < valor):
	x = (cont * 2) * (cont * 2 + 1) * (cont * 2 + 2)
	apx = apx + (-1) ** (cont + 1) * 4 / x 
	cont =  cont + 1
	
print(round(apx,8))

-- EXECUTION TIME:
0.192109
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
